--- a/eucaconsole/static/css/pages/login.css
+++ b/eucaconsole/static/css/pages/login.css
@@ -12,11 +12,11 @@
 #login-wrapper label { font-weight: bold; color: #444; white-space: nowrap; vertical-align: middle; position: relative; top: 0; left: 0; bottom: 10px; }
 #login-wrapper input { background-color: #e6e7e8; height: 2.25rem; }
 #login-wrapper .hide-aws { max-width: 480px; margin: 0 auto; }
-#login-wrapper .tabs { position: relative; top: 1px; }
-#login-wrapper .tabs a { color: #5a5a5a; }
-#login-wrapper .tabs a:hover { color: #007dba; }
-#login-wrapper .tabs dd.active { padding-bottom: 0; }
-#login-wrapper .tabs dd.active a { color: #007dba; background-color: white; border: 1px solid #cccccc; border-bottom: none; }
+#login-wrapper .tabs { max-height: 2.6rem !important; }
+#login-wrapper .tabs dd { position: relative; top: 1px; z-index: 999; }
+#login-wrapper .tabs dd a { padding: 10px 32px 6px 24px; color: #5a5a5a; background-color: transparent; font-weight: bold; }
+#login-wrapper .tabs dd a:hover { color: #007dba; background-color: transparent; }
+#login-wrapper .tabs dd.active a { color: #007dba; background-color: white; border: 1px solid #cccccc; border-bottom-color: white; padding-top: 8px; padding-right: 31px; padding-left: 23px; }
 #login-wrapper .tabs-content { padding: 1rem; padding-bottom: 2rem; background-color: white; border: 1px solid #cccccc; }
 #login-wrapper .tabs-content .content { width: 85%; margin: 0 auto; }
 #login-wrapper .button { display: block; width: 100%; margin-top: 12px; margin-bottom: 12px; background-color: #007dba; }
