--- a/eucaconsole/static/sass/includes/_eucavariables.scss
+++ b/eucaconsole/static/sass/includes/_eucavariables.scss
@@ -275,34 +275,15 @@ $tooltip-padding: rem-calc(5);
 
 // Tab mixins (wizards, etc.)
 @mixin standard-tabs-mixin {
-    position: relative;
-    top: 1px;
-    a {
-        color: $hp-gray-65;
-        &:hover {
-            color: $hp-accessible-blue;
-        }
-    }
-    dd.active {
-        padding-bottom: 0;
-        a {
-            color: $hp-accessible-blue;
-            background-color: white;
-            border: 1px solid $hp-gray-20;
-            border-bottom: none;
-        }
-    }
-}
-
-@mixin detail-page-tabs-mixin {
     max-height: 2.6rem !important;
     dd {
-        @include validation-error-mixin;
-        padding-bottom: 0 !important;
+        position: relative;
+        top: 1px;
+        z-index: 999;
         a {
+            padding: 10px 32px 6px 24px;
             color: $hp-gray-65;
             background-color: transparent;
-            padding: 10px 32px 6px 24px;
             font-weight: bold;
             &:hover {
                 color: $hp-accessible-blue;
@@ -310,14 +291,14 @@ $tooltip-padding: rem-calc(5);
             }
         }
         &.active {
-            position: relative;
-            top: 1px;
-            z-index: 999;
             a {
                 color: $hp-accessible-blue;
                 background-color: white;
                 border: 1px solid $hp-gray-20;
-                border-bottom: none;
+                border-bottom-color: white;
+                padding-top: 8px;
+                padding-right: 31px;
+                padding-left: 23px;
             }
         }
     }
@@ -347,6 +328,7 @@ $tooltip-padding: rem-calc(5);
         padding: $wizard-tab-padding;
         .cir {
             background-color: $hp-gray-65;
+            margin-right: 8px;
         }
     }
     .cir {
