--- a/eucaconsole/static/sass/includes/_wizard.scss
+++ b/eucaconsole/static/sass/includes/_wizard.scss
@@ -50,8 +50,6 @@
         margin-bottom: 0.5rem;
     }
     .tabs {
-        position: relative;
-        top: 1px;
         dd {
             @include wizard-tabs-mixin;
         }
